name:           RingReader
version:        0.1
synopsis:       a ring buffer output filter
author:         Edward Langley
license:        MIT
build-type:     Simple
cabal-version:  >= 1.10

executable ring_reader
  build-depends:  cmdargs,hscurses,base,transformers,mtl,process
  default-language: Haskell2010
  main-is:        RingReader.hs
  hs-source-dirs: src

