name:           ring_reader
version:        0.1
synopsis:       a ring buffer output filter
author:         Edward Langley
license:        MIT
build-type:     Simple
cabal-version:  >= 1.16

executable program1
  build-depends:  CmdArgs,HSCurses
  main-is:        ring_reader.hs
  hs-source-dirs: .

